--- a/Slides/index.html
+++ b/Slides/index.html
@@ -210,6 +210,37 @@
 </div><div class="column" style="width:40%;">
 <p><img data-src="https://www.maynoothuniversity.ie/sites/default/files/styles/ratio_2_3/public/assets/images/Computer-Science---John-McDonald---NUI-Maynooth.jpg" class="absolute" style="top: 150px; left: 600px; width: 30%; "></p>
 </div></div>
+</section>
+<section id="a.i.robotics" class="slide level2" data-background="#43464B" data-background-image="images/cybernetics.jpg">
+<h2>A.I.Robotics</h2>
+</section>
+<section id="charles-markham" class="slide level2">
+<h2>Charles Markham</h2>
+<div class="columns">
+<div class="column" style="width:60%;">
+<p>Research interests:</p>
+<ul>
+<li>Image Processing</li>
+<li>Computer Vision</li>
+<li>Deep Neural Networks</li>
+</ul>
+</div><div class="column" style="width:40%;">
+<p><img data-src="https://www.maynoothuniversity.ie/sites/default/files/styles/ratio_2_3/public/assets/images/Computer-Science---Charles-Markham---NUI-Maynooth.jpg" class="absolute" style="top: 150px; left: 600px; width: 40%; "></p>
+</div></div>
+</section>
+<section id="tim-mccarthy" class="slide level2">
+<h2>Tim McCarthy</h2>
+<div class="columns">
+<div class="column" style="width:60%;">
+<p>Research interests:</p>
+<ul>
+<li>Geospatial Science</li>
+<li>Geospatial Technology</li>
+<li>Drones</li>
+</ul>
+</div><div class="column" style="width:40%;">
+<p><img data-src="https://www.maynoothuniversity.ie/sites/default/files/styles/ratio_2_3/public/assets/images/Tim-McGrath.jpg" class="absolute" style="top: 150px; left: 600px; width: 40%; "></p>
+</div></div>
 <!--
 
 ## Kevin Casey
@@ -283,34 +314,6 @@ Research interests:
 <p><img data-src="https://www.maynoothuniversity.ie/sites/default/files/styles/ratio_2_3/public/assets/images/Computer-Science---Rosemary-Monahan---NUI-Maynooth.jpg" class="absolute" style="top: 150px; left: 600px; width: 40%; "></p>
 </div></div>
 </section>
-<section id="charles-markham" class="slide level2">
-<h2>Charles Markham</h2>
-<div class="columns">
-<div class="column" style="width:60%;">
-<p>Research interests:</p>
-<ul>
-<li>Image Processing</li>
-<li>Computer Vision</li>
-<li>Deep Neural Networks</li>
-</ul>
-</div><div class="column" style="width:40%;">
-<p><img data-src="https://www.maynoothuniversity.ie/sites/default/files/styles/ratio_2_3/public/assets/images/Computer-Science---Charles-Markham---NUI-Maynooth.jpg" class="absolute" style="top: 150px; left: 600px; width: 40%; "></p>
-</div></div>
-</section>
-<section id="tim-mccarthy" class="slide level2">
-<h2>Tim McCarthy</h2>
-<div class="columns">
-<div class="column" style="width:60%;">
-<p>Research interests:</p>
-<ul>
-<li>Geospatial Science</li>
-<li>Geospatial Technology</li>
-<li>Drones</li>
-</ul>
-</div><div class="column" style="width:40%;">
-<p><img data-src="https://www.maynoothuniversity.ie/sites/default/files/styles/ratio_2_3/public/assets/images/Tim-McGrath.jpg" class="absolute" style="top: 150px; left: 600px; width: 40%; "></p>
-</div></div>
-</section>
 <section id="barak-a.-pearlmutter" class="slide level2">
 <h2>Barak A. Pearlmutter</h2>
 <div class="columns">
@@ -372,6 +375,15 @@ Research interests:
 </ul>
 </div><div class="column" style="width:40%;">
 <p><img data-src="https://www.maynoothuniversity.ie/sites/default/files/styles/ratio_2_3/public/assets/images/DamianWoods_MaynoothUniversity.jpg" class="absolute" style="top: 150px; left: 600px; width: 40%; "></p>
+</div></div>
+</section>
+<section id="dna-computing" class="slide level2" data-background="#43464B" data-background-image="images/dna.jpg">
+<h2>DNA computing</h2>
+<div class="columns">
+<div class="column" style="width:60%;">
+<p><a href="https://disco-tech.eu" class="uri">https://disco-tech.eu</a></p>
+</div><div class="column" style="width:40%;">
+<p><img data-src="images/disco.jpg" class="absolute" style="top: 150px; left: 700px; width: 40%; "></p>
 </div></div>
 </section>
 <section id="hao-wu" class="slide level2">
